# contextbar

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  LICENSE  PRODUCT.md  README.md  SPEC.md  STATUS.md  eslint.config.js  homepage-prototypes-v2.html  index.html  mock-ui.html  package-lock.json  package.json  repo-health-report.md  repo-health-scorer.skill  splash-prototypes.html  vite.config.ts  vitest.config.ts
.claude/: llm-repos.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  stale.yml  tag-on-version-bump.yml  tools-reference-watch.yml  update-pricing.yml
context-bar-ideas/: CONTEXT_BAR_FEATURE_TABLE_AND_EXTENDED_VIEW.md  CTX_MULTI_AGENT_INTEGRATION.md  HISTORY_FEATURE_IDEAS.md  HISTORY_FEATURE_PLAN.md  HISTORY_RESEARCH.md  HISTORY_TOOLS_REFERENCE.md  RELEASE_PLAN.md  insights-prototype.html  multi-agent-sessions-plan.md  my-work-prototype.html  my-work-spec.md  oss-learnings.md  page-prototypes-expanded.html  page-prototypes-popover-core.html  page-prototypes-popover-secondary.html  splash-agent-mix-variations.html  testing-and-visual-ideas.md  ux-fixes-prototype.html  worktrees-prototype.html  worktrees-spec.md
e2e/: playwright.config.ts  tsconfig.json  wdio.conf.ts
e2e/fixtures/: expanded-data.ts  skill-helper.ts  tauri-mock.ts
e2e/specs/: expanded-navigation.e2e.ts  logs-and-permissions.e2e.ts  mcp-toggle.e2e.ts  mywork.e2e.ts  navigation.e2e.ts  navigation.spec.ts  notifications.e2e.ts  repos.e2e.ts  sessions-multiagent.e2e.ts  skill-toggle.e2e.ts  skill-toggle.spec.ts  tool-states.e2e.ts
scripts/: clean-dmg.sh  install-hooks.sh  pre-commit-check.sh  update-pricing.py
src/: App.tsx  analytics.ts  index.css  instrument.ts  main.tsx  search.ts  types.ts  useAgents.ts  useAgentsDiff.ts  useExpandedState.ts  useNotifications.ts  useRovingFocus.ts  useTheme.ts  useTools.ts  useToolsDiff.ts  useUpdateCheck.ts  useViewRouter.ts  viewRouter.ts  vitest.setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: pricing.json
src-tauri/src/: app_state.rs  backup.rs  capabilities.rs  db.rs  doctor.rs  error.rs  installer.rs  lib.rs  main.rs  mcp_client.rs  models.rs  permissions.rs  repo_config.rs  watcher.rs
src-tauri/src/detectors/: aider.rs  amazonq.rs  chatgpt.rs  claude.rs  continue.rs  copilot.rs  cursor.rs  gemini.rs  mod.rs  windsurf.rs  zed.rs
src-tauri/src/engine/: jsonc.rs  manifest.rs  mcp.rs  mod.rs  resolve.rs  skill.rs  worktrees.rs
src-tauri/src/engine/history/: index.rs  mod.rs  parser.rs  stats.rs  types.rs
src-tauri/src/engine/manifests/: agy.toml  aider.toml  amazonq.toml  chatgpt.toml  claude-tools-baseline.txt  claude.toml  codex.toml  continue.toml  copilot.toml  cursor.toml  gemini.toml  kiro.toml  windsurf.toml  zed.toml
src-tauri/src/engine/sessions/: agy.rs  codex.rs  gemini.rs  mod.rs
src/__tests__/: App.test.tsx  fixtures.ts  routerReducer.test.ts  search.test.ts  useAgents.test.ts  useAgentsDiff.test.ts  useExpandedState.test.ts  useNotifications.test.ts  useProviderFilter.test.ts  useTheme.test.ts  useTools.test.ts  useToolsDiff.test.ts  useUpdateCheck.test.ts  useViewRouter.test.ts  viewRouter.test.ts
src/components/: AgentChips.tsx  AgentDetailPage.tsx  AgentDetails.tsx  AgentDot.tsx  AgentRow.tsx  CapabilityDetail.tsx  CodexProfilesView.tsx  ExplainerOverlay.tsx  Footer.tsx  Header.tsx  Highlight.tsx  HintBanner.tsx  InstalledOnSection.tsx  LogsPanel.tsx  Markdown.tsx  McpDetailPanel.tsx  McpRow.tsx  McpSection.tsx  McpsListPanel.tsx  NotificationsPanel.tsx  PermissionsDetailPanel.tsx  PermissionsSection.tsx  PermissionsSetupScreen.tsx  ProviderChips.tsx  RepoAgentConfigView.tsx  SearchBar.tsx  SearchInput.tsx  Settings.tsx  SkillDetailPanel.tsx  SkillRow.tsx  SkillSection.tsx  SkillsListPanel.tsx  SplashScreen.tsx  StatusDot.tsx  Toggle.tsx  ToolDetailPage.tsx  ToolDetails.tsx  ToolDot.tsx  ToolRow.tsx  Tooltip.tsx  (+1 more)
src/constants/: tips.ts  (+2 more)
(+85 files in other folders)
