[package]
name = "contextbar"
version = "0.8.9"
description = "macOS menu bar app — unified view of AI tool skills and MCP servers"
authors = ["varkart"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "contextbar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
window-vibrancy = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = { version = "1.1", features = ["parse"] }
dirs = "6"
tokio = { version = "1", features = ["process", "time", "io-util"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "2"
tauri-plugin-window-state = "2.4.1"

[dev-dependencies]
tempfile = "3"

